objects/Speaker_Details__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Bio_of_the_Speaker__c</fullName>
        <label>Short Bio of the Speaker</label>
        <type>TextArea</type>
    </fields>
    <label>Speaker Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SN-{0000}</displayFormat>
        <label>Speaker Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speaker Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>